@@ -31,6 +31,7 @@ git-annex (4.20130724) UNRELEASED; urgency=low
   * Improve test suite on Windows; now tests git annex sync.
   * Fix a few bugs involving filenames that are at or near the filesystem's
     maximum filename length limit.
+  * find: Avoid polluting stdout with progress messages. Closes: #718186
 
  -- Joey Hess <joeyh@debian.org>  Tue, 23 Jul 2013 12:39:48 -0400
 
